Fix csv's download

--- a/movies.ipynb
+++ b/movies.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 169,
    "id": "6ae17927-6283-4d65-ad68-a8c1eb41d993",
    "metadata": {},
    "outputs": [],
@@ -15,18 +15,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 170,
    "id": "021d5765-16d7-4bce-8390-711eb16e0c3e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "genres = pd.read_csv(\"C:\\\\Users\\\\jacek\\\\Downloads\\\\tmdb_genres.csv\", names=['qty', 'genres'], header=0)\n",
-    "movies = pd.read_csv(\"C:\\\\Users\\\\jacek\\\\Downloads\\\\tmdb_movies.csv\")"
+    "genres = pd.read_csv(\".\\\\data\\\\tmdb_genres.csv\", names=['qty', 'genres'], header=0)\n",
+    "movies = pd.read_csv(\".\\\\data\\\\tmdb_movies.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 171,
    "id": "0c222e9e-debd-420f-bd0f-0257ceaadfb7",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
        "4 878.00  Science Fiction"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 172,
    "id": "686348a1-9176-4542-a143-f619f9bc0797",
    "metadata": {},
    "outputs": [
@@ -305,7 +305,7 @@
        "4     28.00  "
       ]
      },
-     "execution_count": 153,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 173,
    "id": "c5c5ed46-7d49-4070-8787-ef12adc7d8a2",
    "metadata": {},
    "outputs": [
@@ -659,7 +659,7 @@
        "65             The Dark Knight          8.20       12002     18.00  "
       ]
      },
-     "execution_count": 154,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 174,
    "id": "3895634c-1bae-4dfa-b708-3f9849c86d5f",
    "metadata": {},
    "outputs": [],
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 175,
    "id": "f05cfb02-195a-41c9-90a3-161ad3ee8ed1",
    "metadata": {},
    "outputs": [
@@ -769,7 +769,7 @@
        "2016         45,703,269.23 139,049,586.04"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,17 +794,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 176,
    "id": "fa9bd0af-31b0-45a1-9750-83afa2bbb3bc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x21920f19910>"
+       "<matplotlib.legend.Legend at 0x21924408cd0>"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 177,
    "id": "e66e61ae-581c-4967-809c-c09136d02d80",
    "metadata": {},
    "outputs": [
@@ -874,7 +874,7 @@
        "Name: genres, dtype: int64"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 178,
    "id": "d7c6e30c-a53c-46f6-a03c-34cb08d0eec7",
    "metadata": {},
    "outputs": [
@@ -1036,7 +1036,7 @@
        "Foreign            83.00"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
