--- a/movies.ipynb
+++ b/movies.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 52,
    "id": "6ae17927-6283-4d65-ad68-a8c1eb41d993",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 53,
    "id": "021d5765-16d7-4bce-8390-711eb16e0c3e",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 54,
    "id": "0c222e9e-debd-420f-bd0f-0257ceaadfb7",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
        "4 878.00  Science Fiction"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 55,
    "id": "686348a1-9176-4542-a143-f619f9bc0797",
    "metadata": {},
    "outputs": [
@@ -305,7 +305,7 @@
        "4     28.00  "
       ]
      },
-     "execution_count": 172,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,8 +324,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
-   "id": "c5c5ed46-7d49-4070-8787-ef12adc7d8a2",
+   "execution_count": 56,
+   "id": "68b8b5b1-57fd-4c33-b5c0-7efde6aa45ac",
    "metadata": {},
    "outputs": [
     {
@@ -490,26 +490,6 @@
        "      <td>53.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>662</th>\n",
-       "      <td>662</td>\n",
-       "      <td>63000000</td>\n",
-       "      <td>http://www.foxmovies.com/movies/fight-club</td>\n",
-       "      <td>550</td>\n",
-       "      <td>en</td>\n",
-       "      <td>Fight Club</td>\n",
-       "      <td>A ticking-time-bomb insomniac and a slippery s...</td>\n",
-       "      <td>146.76</td>\n",
-       "      <td>1999-10-15</td>\n",
-       "      <td>100853753</td>\n",
-       "      <td>139.00</td>\n",
-       "      <td>Released</td>\n",
-       "      <td>Mischief. Mayhem. Soap.</td>\n",
-       "      <td>Fight Club</td>\n",
-       "      <td>8.30</td>\n",
-       "      <td>9413</td>\n",
-       "      <td>18.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>1818</th>\n",
        "      <td>1818</td>\n",
        "      <td>22000000</td>\n",
@@ -530,43 +510,63 @@
        "      <td>18.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1990</th>\n",
-       "      <td>1990</td>\n",
-       "      <td>18000000</td>\n",
-       "      <td>http://www.starwars.com/films/star-wars-episod...</td>\n",
-       "      <td>1891</td>\n",
+       "      <th>662</th>\n",
+       "      <td>662</td>\n",
+       "      <td>63000000</td>\n",
+       "      <td>http://www.foxmovies.com/movies/fight-club</td>\n",
+       "      <td>550</td>\n",
        "      <td>en</td>\n",
-       "      <td>The Empire Strikes Back</td>\n",
-       "      <td>The epic saga continues as Luke Skywalker, in ...</td>\n",
-       "      <td>78.52</td>\n",
-       "      <td>1980-05-17</td>\n",
-       "      <td>538400000</td>\n",
-       "      <td>124.00</td>\n",
+       "      <td>Fight Club</td>\n",
+       "      <td>A ticking-time-bomb insomniac and a slippery s...</td>\n",
+       "      <td>146.76</td>\n",
+       "      <td>1999-10-15</td>\n",
+       "      <td>100853753</td>\n",
+       "      <td>139.00</td>\n",
        "      <td>Released</td>\n",
-       "      <td>The Adventure Continues...</td>\n",
-       "      <td>The Empire Strikes Back</td>\n",
-       "      <td>8.20</td>\n",
-       "      <td>5879</td>\n",
-       "      <td>12.00</td>\n",
+       "      <td>Mischief. Mayhem. Soap.</td>\n",
+       "      <td>Fight Club</td>\n",
+       "      <td>8.30</td>\n",
+       "      <td>9413</td>\n",
+       "      <td>18.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>65</th>\n",
-       "      <td>65</td>\n",
-       "      <td>185000000</td>\n",
-       "      <td>http://thedarkknight.warnerbros.com/dvdsite/</td>\n",
-       "      <td>155</td>\n",
+       "      <th>2170</th>\n",
+       "      <td>2170</td>\n",
+       "      <td>806948</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>539</td>\n",
        "      <td>en</td>\n",
-       "      <td>The Dark Knight</td>\n",
-       "      <td>Batman raises the stakes in his war on crime. ...</td>\n",
-       "      <td>187.32</td>\n",
-       "      <td>2008-07-16</td>\n",
-       "      <td>1004558444</td>\n",
-       "      <td>152.00</td>\n",
+       "      <td>Psycho</td>\n",
+       "      <td>When larcenous real estate clerk Marion Crane ...</td>\n",
+       "      <td>93.07</td>\n",
+       "      <td>1960-06-16</td>\n",
+       "      <td>32000000</td>\n",
+       "      <td>109.00</td>\n",
        "      <td>Released</td>\n",
-       "      <td>Why So Serious?</td>\n",
-       "      <td>The Dark Knight</td>\n",
+       "      <td>The master of suspense moves his cameras into ...</td>\n",
+       "      <td>Psycho</td>\n",
        "      <td>8.20</td>\n",
-       "      <td>12002</td>\n",
+       "      <td>2320</td>\n",
+       "      <td>18.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1847</th>\n",
+       "      <td>1847</td>\n",
+       "      <td>25000000</td>\n",
+       "      <td>http://www.warnerbros.com/goodfellas</td>\n",
+       "      <td>769</td>\n",
+       "      <td>en</td>\n",
+       "      <td>GoodFellas</td>\n",
+       "      <td>The true story of Henry Hill, a half-Irish, ha...</td>\n",
+       "      <td>63.65</td>\n",
+       "      <td>1990-09-12</td>\n",
+       "      <td>46836394</td>\n",
+       "      <td>145.00</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>Three Decades of Life in the Mafia.</td>\n",
+       "      <td>GoodFellas</td>\n",
+       "      <td>8.20</td>\n",
+       "      <td>3128</td>\n",
        "      <td>18.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -574,41 +574,29 @@
        "</div>"
       ],
       "text/plain": [
-       "      Unnamed: 0     budget  \\\n",
-       "1881        1881   25000000   \n",
-       "3337        3337    6000000   \n",
-       "2294        2294   15000000   \n",
-       "3865        3865    3300000   \n",
-       "2731        2731   13000000   \n",
-       "3232        3232    8000000   \n",
-       "662          662   63000000   \n",
-       "1818        1818   22000000   \n",
-       "1990        1990   18000000   \n",
-       "65            65  185000000   \n",
+       "      Unnamed: 0    budget                                    homepage  \\\n",
+       "1881        1881  25000000                                         NaN   \n",
+       "3337        3337   6000000                http://www.thegodfather.com/   \n",
+       "2294        2294  15000000      http://movies.disney.com/spirited-away   \n",
+       "3865        3865   3300000           http://sonyclassics.com/whiplash/   \n",
+       "2731        2731  13000000                                         NaN   \n",
+       "3232        3232   8000000                                         NaN   \n",
+       "1818        1818  22000000              http://www.schindlerslist.com/   \n",
+       "662          662  63000000  http://www.foxmovies.com/movies/fight-club   \n",
+       "2170        2170    806948                                         NaN   \n",
+       "1847        1847  25000000        http://www.warnerbros.com/goodfellas   \n",
        "\n",
-       "                                               homepage      id  \\\n",
-       "1881                                                NaN     278   \n",
-       "3337                       http://www.thegodfather.com/     238   \n",
-       "2294             http://movies.disney.com/spirited-away     129   \n",
-       "3865                  http://sonyclassics.com/whiplash/  244786   \n",
-       "2731                                                NaN     240   \n",
-       "3232                                                NaN     680   \n",
-       "662          http://www.foxmovies.com/movies/fight-club     550   \n",
-       "1818                     http://www.schindlerslist.com/     424   \n",
-       "1990  http://www.starwars.com/films/star-wars-episod...    1891   \n",
-       "65         http://thedarkknight.warnerbros.com/dvdsite/     155   \n",
-       "\n",
-       "     original_language            original_title  \\\n",
-       "1881                en  The Shawshank Redemption   \n",
-       "3337                en             The Godfather   \n",
-       "2294                ja                  千と千尋の神隠し   \n",
-       "3865                en                  Whiplash   \n",
-       "2731                en    The Godfather: Part II   \n",
-       "3232                en              Pulp Fiction   \n",
-       "662                 en                Fight Club   \n",
-       "1818                en          Schindler's List   \n",
-       "1990                en   The Empire Strikes Back   \n",
-       "65                  en           The Dark Knight   \n",
+       "          id original_language            original_title  \\\n",
+       "1881     278                en  The Shawshank Redemption   \n",
+       "3337     238                en             The Godfather   \n",
+       "2294     129                ja                  千と千尋の神隠し   \n",
+       "3865  244786                en                  Whiplash   \n",
+       "2731     240                en    The Godfather: Part II   \n",
+       "3232     680                en              Pulp Fiction   \n",
+       "1818     424                en          Schindler's List   \n",
+       "662      550                en                Fight Club   \n",
+       "2170     539                en                    Psycho   \n",
+       "1847     769                en                GoodFellas   \n",
        "\n",
        "                                               overview  popularity  \\\n",
        "1881  Framed in the 1940s for the double murder of h...      136.75   \n",
@@ -617,22 +605,22 @@
        "3865  Under the direction of a ruthless instructor, ...      192.53   \n",
        "2731  In the continuing saga of the Corleone crime f...      105.79   \n",
        "3232  A burger-loving hit man, his philosophical par...      121.46   \n",
-       "662   A ticking-time-bomb insomniac and a slippery s...      146.76   \n",
        "1818  The true story of how businessman Oskar Schind...      104.47   \n",
-       "1990  The epic saga continues as Luke Skywalker, in ...       78.52   \n",
-       "65    Batman raises the stakes in his war on crime. ...      187.32   \n",
+       "662   A ticking-time-bomb insomniac and a slippery s...      146.76   \n",
+       "2170  When larcenous real estate clerk Marion Crane ...       93.07   \n",
+       "1847  The true story of Henry Hill, a half-Irish, ha...       63.65   \n",
        "\n",
-       "     release_date     revenue  runtime    status  \\\n",
-       "1881   1994-09-23    28341469   142.00  Released   \n",
-       "3337   1972-03-14   245066411   175.00  Released   \n",
-       "2294   2001-07-20   274925095   125.00  Released   \n",
-       "3865   2014-10-10    13092000   105.00  Released   \n",
-       "2731   1974-12-20    47542841   200.00  Released   \n",
-       "3232   1994-10-08   213928762   154.00  Released   \n",
-       "662    1999-10-15   100853753   139.00  Released   \n",
-       "1818   1993-11-29   321365567   195.00  Released   \n",
-       "1990   1980-05-17   538400000   124.00  Released   \n",
-       "65     2008-07-16  1004558444   152.00  Released   \n",
+       "     release_date    revenue  runtime    status  \\\n",
+       "1881   1994-09-23   28341469   142.00  Released   \n",
+       "3337   1972-03-14  245066411   175.00  Released   \n",
+       "2294   2001-07-20  274925095   125.00  Released   \n",
+       "3865   2014-10-10   13092000   105.00  Released   \n",
+       "2731   1974-12-20   47542841   200.00  Released   \n",
+       "3232   1994-10-08  213928762   154.00  Released   \n",
+       "1818   1993-11-29  321365567   195.00  Released   \n",
+       "662    1999-10-15  100853753   139.00  Released   \n",
+       "2170   1960-06-16   32000000   109.00  Released   \n",
+       "1847   1990-09-12   46836394   145.00  Released   \n",
        "\n",
        "                                                tagline  \\\n",
        "1881  Fear can hold you prisoner. Hope can set you f...   \n",
@@ -641,10 +629,10 @@
        "3865    The road to greatness can take you to the edge.   \n",
        "2731  I don't feel I have to wipe everybody out, Tom...   \n",
        "3232  Just because you are a character doesn't mean ...   \n",
-       "662                             Mischief. Mayhem. Soap.   \n",
        "1818    Whoever saves one life, saves the world entire.   \n",
-       "1990                         The Adventure Continues...   \n",
-       "65                                      Why So Serious?   \n",
+       "662                             Mischief. Mayhem. Soap.   \n",
+       "2170  The master of suspense moves his cameras into ...   \n",
+       "1847                Three Decades of Life in the Mafia.   \n",
        "\n",
        "                         title  vote_average  vote_count  genre_id  \n",
        "1881  The Shawshank Redemption          8.50        8205     18.00  \n",
@@ -653,39 +641,30 @@
        "3865                  Whiplash          8.30        4254     18.00  \n",
        "2731    The Godfather: Part II          8.30        3338     18.00  \n",
        "3232              Pulp Fiction          8.30        8428     53.00  \n",
-       "662                 Fight Club          8.30        9413     18.00  \n",
        "1818          Schindler's List          8.30        4329     18.00  \n",
-       "1990   The Empire Strikes Back          8.20        5879     12.00  \n",
-       "65             The Dark Knight          8.20       12002     18.00  "
+       "662                 Fight Club          8.30        9413     18.00  \n",
+       "2170                    Psycho          8.20        2320     18.00  \n",
+       "1847                GoodFellas          8.20        3128     18.00  "
       ]
      },
-     "execution_count": 173,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "movies.sort_values(by='vote_average', ascending=False, inplace=True)\n",
-    "movies.head()\n",
-    "movies[movies['vote_count'] > movies['vote_count'].quantile(0.75)].head(10)"
+    "movies_filtered = movies[movies['vote_count'] > movies['vote_count'].quantile(0.75)]\n",
+    "top_movies = movies_filtered.sort_values(by='vote_average', ascending=False)\n",
+    "top_movies.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
-   "id": "3895634c-1bae-4dfa-b708-3f9849c86d5f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "movies['release_date'] = pd.to_datetime(movies['release_date'])\n",
-    "movies.dropna(subset=['release_date'], inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 175,
-   "id": "f05cfb02-195a-41c9-90a3-161ad3ee8ed1",
-   "metadata": {},
+   "execution_count": 57,
+   "id": "26e6fd9c-159c-4457-8713-98e919a3aa35",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -769,19 +748,20 @@
        "2016         45,703,269.23 139,049,586.04"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "movies['release_date'] = pd.to_datetime(movies['release_date'])\n",
+    "movies.dropna(subset=['release_date'], inplace=True)\n",
     "movies['release_year'] = movies['release_date'].dt.year\n",
-    "movies.set_index('release_year', inplace=True)\n",
+    "movies_selected = movies.loc[(movies['release_year'] >= 2010) & (movies['release_year'] <= 2016)]\n",
+    "movies_selected.set_index('release_year', inplace=True)\n",
     "pd.set_option('display.float_format', '{:,.2f}'.format)\n",
-    "movies.head(2)\n",
-    "movies_2 = movies.pivot_table(index='release_year', values=['revenue', 'budget'], aggfunc='mean')\n",
-    "movies_selected = movies_2.loc[2010:2016]\n",
-    "movies_selected"
+    "movies_2 = movies_selected.pivot_table(index='release_year', values=['revenue', 'budget'], aggfunc='mean')\n",
+    "movies_2"
    ]
   },
   {
@@ -794,17 +774,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 58,
    "id": "fa9bd0af-31b0-45a1-9750-83afa2bbb3bc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x21924408cd0>"
+       "<matplotlib.legend.Legend at 0x1babd9d0e80>"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -829,8 +809,8 @@
     "axes = fig.add_axes([0,0,1,1])\n",
     "axes.set_title('Średni przychód i budżet filmu w latach 2010 - 2016')\n",
     "axes.yaxis.set_major_formatter(formatter)\n",
-    "axes.plot(movies_selected['budget'], color='red', linewidth=3, label='budżet')\n",
-    "axes.bar(movies_selected.index , movies_selected['revenue'], label='przychód')\n",
+    "axes.plot(movies_2['budget'], color='red', linewidth=3, label='budżet')\n",
+    "axes.bar(movies_2.index , movies_2['revenue'], label='przychód')\n",
     "axes.legend(loc=(1.05,0.8))"
    ]
   },
@@ -844,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 59,
    "id": "e66e61ae-581c-4967-809c-c09136d02d80",
    "metadata": {},
    "outputs": [
@@ -874,7 +854,7 @@
        "Name: genres, dtype: int64"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 60,
    "id": "d7c6e30c-a53c-46f6-a03c-34cb08d0eec7",
    "metadata": {},
    "outputs": [
@@ -1036,7 +1016,7 @@
        "Foreign            83.00"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1056,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 61,
    "id": "1df7ea39-6c70-4ca1-afb9-9a0325738566",
    "metadata": {},
    "outputs": [
@@ -1066,7 +1046,7 @@
        "<AxesSubplot:ylabel='Frequency'>"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     },
